--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,8 @@ description:         Please see the README on GitHub at <https://github.com/jlam
 
 dependencies:
 - base >= 4.7 && < 5
+- bytestring
+- containers
 - lens
 
 library:
