--- a/package.yaml
+++ b/package.yaml
@@ -48,6 +48,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - passman
+    - easy-file >= 0.2.2 && < 0.3
     - HCL >= 1.7.1 && < 2
     - transformers
 
