--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                passman
-version:             0.3.0.1
+version:             0.3.0.2
 github:              "jlamothe/passman"
 license:             LGPL-3
 author:              "Jonathan Lamothe"
@@ -26,7 +26,7 @@ dependencies:
 - containers >= 0.6.2.1 && < 0.7
 - microlens >= 0.4.11.2 && < 0.5
 - microlens-th >= 0.4.3.6 && < 0.5
-- random
+- random >=1.1 && < 1.2
 
 ghc-options:
 - -Wall
@@ -34,10 +34,10 @@ ghc-options:
 library:
   source-dirs: src
   dependencies:
-  - base16-bytestring
-  - base64-bytestring
-  - SHA
-  - text
+  - base16-bytestring >= 0.1.1.7 && < 0.2
+  - base64-bytestring >= 1.1.0.0 && < 1.2
+  - SHA >= 1.6.4.4 && < 1.7
+  - text >= 1.2.4.1 && < 1.3
 
 executables:
   passman:
@@ -51,7 +51,7 @@ executables:
     - passman
     - easy-file >= 0.2.2 && < 0.3
     - HCL >= 1.8 && < 1.9
-    - transformers
+    - transformers >= 0.5.6.2
 
 tests:
   passman-test:
