--- a/package.yaml
+++ b/package.yaml
@@ -51,7 +51,7 @@ executables:
     - passman
     - easy-file >= 0.2.2 && < 0.3
     - HCL >= 1.8 && < 1.9
-    - transformers >= 0.5.6.2
+    - transformers >= 0.5.6.2 && < 0.6
 
 tests:
   passman-test:
