--- a/passman.cabal
+++ b/passman.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e3bd0ca2b360b025666f4503e3115caaaed34c7719487d90ae4d5eb58f9621e9
+-- hash: 446a4923e2c01f3e5ea52ebcf3b61942b39ff9b86e2118699c05ae8aac097903
 
 name:           passman
 version:        0.3.1
@@ -45,7 +45,7 @@ library
     , containers >=0.6.2.1 && <0.7
     , microlens >=0.4.11.2 && <0.5
     , microlens-th >=0.4.3.6 && <0.5
-    , random >=1.1 && <1.2
+    , random ==1.1.*
     , text >=1.2.4.1 && <1.3
   default-language: Haskell2010
 
@@ -60,7 +60,7 @@ executable passman
       app
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      HCL >=1.8 && <1.9
+      HCL ==1.8.*
     , aeson >=1.5.6.0 && <1.6
     , base >=4.7 && <5
     , bytestring >=0.10.12.0 && <0.11
@@ -69,7 +69,7 @@ executable passman
     , microlens >=0.4.11.2 && <0.5
     , microlens-th >=0.4.3.6 && <0.5
     , passman
-    , random >=1.1 && <1.2
+    , random ==1.1.*
     , transformers >=0.5.6.2 && <0.6
   default-language: Haskell2010
 
@@ -104,5 +104,5 @@ test-suite passman-test
     , microlens >=0.4.11.2 && <0.5
     , microlens-th >=0.4.3.6 && <0.5
     , passman
-    , random >=1.1 && <1.2
+    , random ==1.1.*
   default-language: Haskell2010
