--- a/package.yaml
+++ b/package.yaml
@@ -17,7 +17,7 @@ category:            Security
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/jlamothe/passman#readme>
+description:         a simple password manager - see README.md for details
 
 dependencies:
 - base >= 4.7 && < 5
